order queue finished

--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "mongoose": "^5.7.12"
+    },
+    "devDependencies": {
+        "prettier": "^1.19.1"
     }
 }
