--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -8,6 +8,8 @@ services:
             - "5000:3000"
         links:
             - mongo
+        env_file:
+            - .env
     mongo: 
         container_name: mongo
         image: mongo
