--- a/hardware/.vscode/settings.json
+++ b/hardware/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "env/bin/python"
+    "python.pythonPath": "/Users/devinmui/.local/share/virtualenvs/hardware-geu7rwEU/bin/python"
 }
